# precovery

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  MANIFEST.in  README.md  dev-requirements.in  dev-requirements.txt  docker-compose.yml  fetch_data.sh  pyproject.toml  requirements-pip.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: dev-deploy.yml  lint-test.yml  python-package-conda.yml  python-publish-conda.yml  python-publish-pypi.yml  test.yml
dev/bench/: data.js
doc/: dbfile_design.md
doc/examples/: load_data.py  mpc_orbits.csv  precovery_search.py
precovery/: .#frame_db.py  __init__.py  _exposure.py  _version.py  actualdb.py  brute_force.py  candidates_qv.py  config.py  db.py  frame_db.py  healpix_geom.py  main.py  observation.py  orbit.py  precovery_db.py  precovery_db_qv.py  residuals.py  sourcecatalog.py  spherical_geom.py  utils.py
precovery/ingest/: __init__.py  index_observations.py  sort_observations.py
recipe/: conda_build_config.yaml  meta.yaml
scripts/: benchmark.sh  get_mpc_orbits.py  index_observations.py  measure_precover_search_time.py  measure_precovery_db_creation_time.py  precovery-defrag.py  precovery-load-hdf.py  precovery-test.py  profile-sql.sh  profile.sh  set_up_assist.py  sq-execute-test.py  test_orbits.csv
tests/: README.md  conftest.py  get_orbits.py  make_observations.py  test.ipynb  test_benchmarks.py  test_exposure.py  test_frame_db.py  test_healpix_geom.py  test_observation.py  test_orbit.py  test_precovery.py  test_precovery_db.py  test_precovery_index.py  test_precovery_search.py  test_profile.py  test_quivr_types.py  test_sourcecatalog.py  test_spherical_geom.py  test_utils.py  testutils.py
tests/data/: observations.h5  sample_orbits.csv  sample_orbits.parquet
tests/data/index/: observations.csv
tests/data/index/dataset_500/: dataset_500_observations.csv
tests/data/index/dataset_I11/: dataset_I11_observations.csv
tests/data/index/dataset_I41+F51/: dataset_I41+F51_observations.csv
