[metadata]
name = precovery
home_page = https://github.com/spenczar/precovery
description = Experimental system for fast asteroid precovery

version = 0.0.1
author = Spencer Nelson
author_email = swnelson@uw.edu
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_files = LICENSE.md
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >= 3.9
packages =
    precovery

setup_requires =
    setuptools >= 45
    wheel
install_requires =
    numpy

tests_require =
    pytest
    pytest-cov

[flake8]
max_line_length = 110
max_doc_length = 110
ignore =
    W503
    E203

[isort]
profile = black

[aliases]
test=pytest

[mypy]
exclude = virtualenv*
plugins =
    numpy.typing.mypy_plugin,
    sqlalchemy.ext.mypy.plugin

[mypy-pyoorb.*]
ignore_missing_imports = True

[mypy-tables.*]
ignore_missing_imports = True

[mypy-numba.*]
ignore_missing_imports = True

[mypy-healpy.*]
ignore_missing_imports = True

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning:astropy
