[metadata]
name = precovery
home_page = https://github.com/B612-Asteroid-Institute/precovery
description = Fast asteroid precovery at scale
version = file: precovery/version.py
author = B612-Asteroid-Institute, Spencer Nelson
author_email = swnelson@uw.edu
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_files = LICENSE.md
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >= 3.7
packages = find:
setup_requires =
    setuptools >= 45
    wheel
    setuptools_scm >= 6.0
install_requires =
    adam_core @ git+https://git@github.com/B612-Asteroid-Institute/adam_core@37ceca7acf8216d46ec1daea7116acec6350a901#egg=adam_core
    numpy
    numba
    sqlalchemy < 2
    regex
    pandas
    healpy
    requests

[options.extras_require]
tests =
    pre-commit
    pytest
    pytest-cov
    pytest-benchmark
    astroquery

[tool.setuptools_scm]
write_to = "precovery/version.py"
write_to_template = '__version__ = "{version}"\n'

[tool.black]
line-length = 110

[flake8]
max_line_length = 110
ignore =
    W503
    E203
exclude =
    build
    precovery/version.py


[tool.isort]
profile = black

[aliases]
test=pytest

[mypy]
exclude = virtualenv*
plugins =
    numpy.typing.mypy_plugin,
    sqlalchemy.ext.mypy.plugin

[mypy-pyoorb.*]
ignore_missing_imports = True

[mypy-numba.*]
ignore_missing_imports = True

[mypy-healpy.*]
ignore_missing_imports = True

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning:astropy


[options.entry_points]
console_scripts =
    precovery-index = precovery.ingest:index
